# ChangeLog for media-plugins/xmms-arts
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-arts/ChangeLog,v 1.25 2004/10/20 01:48:39 eradicator Exp $

*xmms-arts-0.7.1-r2 (19 Oct 2004)

  19 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +xmms-arts-0.7.1-r2.ebuild:
  Added support for xmms-plugin.eclass.

  12 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -xmms-arts-0.6.0.ebuild:
  Removed old version.

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.7.1-r1.ebuild:
  Stable sparc.

  17 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.7.1-r1.ebuild:
  Stable amd64.

  22 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.4-r6.ebuild:
  Removed stale version.

*xmms-arts-0.7.1-r1 (03 Apr 2004)

  03 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.7.1-r1.ebuild, xmms-arts-0.7.1.ebuild:
  Revbump to fix bug #46681.

  31 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.7.1.ebuild:
  Stable on x86.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.4-r6.ebuild, xmms-arts-0.7.1.ebuild:
  Cleaned up to make aliz's script happy.

  17 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> xmms-arts-0.7.1.ebuild:
  Adding amd64 keyword, closing #44329.

*xmms-arts-0.7.1 (03 Mar 2004)

  03 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.7.1.ebuild:
  Version bump.  Closes bug #41829.

  26 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmms-arts-0.4-r6.ebuild:
  Masking because arts sucks in general and xmms-arts won't work with arts 1.2

*xmms-arts-0.6.0 (15 Sep 2003)

  15 Sep 2003; Seemant Kulleen <seemant@gentoo.org> :
  Version bump, kinda. This is a new package by harvardk of the xmms development
  group. Seems that the old plugin is abandoned by its upstream authors.
  This package seems to be a stand-in replacement. This