@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-arts/xmms-arts-0.7.1-r1.ebuild,v 1.4 2004/09/15 19:22:52 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-arts/xmms-arts-0.7.1-r1.ebuild,v 1.5 2004/11/10 01:22:57 eradicator Exp $
 
 IUSE=""
 
@@ -12,7 +12,7 @@ SRC_URI="http://havardk.xmms.org/plugins/arts_output/${MY_P}.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc sparc ~alpha ~hppa amd64"
+KEYWORDS="~alpha amd64 ~hppa ~ia64 ~ppc sparc x86"
 
 DEPEND=">=media-sound/xmms-1.2.7
 	kde-base/arts"
