@@ -2,16 +2,16 @@
 Hash: SHA1
 
 MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 f1d6389bb261be4d6b9da4c5ff2ac4bf ChangeLog 2086
+MD5 a5df9ddd04da94b29038a2314dd13f85 ChangeLog 2227
 MD5 f706034859ccc5d8f430f25964d51692 xmms-jack-0.9.ebuild 644
-MD5 f2df040b2e93b1dce76ea4535884d5f5 xmms-jack-0.10.ebuild 655
+MD5 f860e0d1f05e18eca40b0beb45a1166e xmms-jack-0.10.ebuild 637
 MD5 bc55450390e54b7fc4c081980bd5b9e2 files/xmms-jack-0.10-cflags.patch 1259
 MD5 16ba3899dbe8858a6ac882b2a288c8c3 files/digest-xmms-jack-0.9 65
 MD5 dea9949d72527c2f6934d30116d23912 files/digest-xmms-jack-0.10 66
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBdjY+ArHZZzCEUG0RAnpXAJ9bs0Cx9blcUkkr0OWqXnOTCAAhNwCfWcbm
-1h4+kitKXVy3K/eMDQzK1Z4=
-=vsgw
+iD8DBQFBkW30ArHZZzCEUG0RAurVAJwIOeosKqx+B3dJtGkdRFrHi5hClQCeOOJq
+eTKRIuk5UQpR0X/kR4lW4i4=
+=Homm
 -----END PGP SIGNATURE-----
