@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/xmms-arts
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-arts/ChangeLog,v 1.25 2004/10/20 01:48:39 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/xmms-arts/ChangeLog,v 1.26 2004/11/10 01:22:57 eradicator Exp $
+
+  09 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  -xmms-arts-0.7.1-r2.ebuild:
+  xmms-plugin eclass is being removed.
 
 *xmms-arts-0.7.1-r2 (19 Oct 2004)
 
